<resources>
    <string name="app_name">Books</string>
    <string name="insert_book_name">Insert book title to search</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="filter_favorites">Filter Favorites</string>
    <string name="back">Back</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="buy_link">Buy Link</string>
    <string name="not_available">Not Available</string>
</resources>